{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 27,
  "lineage": "e78ae9fe-ad81-7d45-c6be-f2a0e5534823",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "documentorai_firewall_internal_becarefullbuddy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-10-04T23:11:09.816-07:00",
            "deny": [],
            "description": "Open all connection for internal source",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/documentorai-400501/global/firewalls/documentorai-firewall-internal-becarefullbuddy",
            "log_config": [],
            "name": "documentorai-firewall-internal-becarefullbuddy",
            "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "priority": 1000,
            "project": "documentorai-400501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/firewalls/documentorai-firewall-internal-becarefullbuddy",
            "source_ranges": [
              "10.24.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "documentorai-firewall-internal-becarefullbuddy"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.documentorai_vpc_01",
            "google_compute_subnetwork.documentorai_pubsubnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "documentorai_firewall_internal_standardwebport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-04T23:11:09.671-07:00",
            "deny": [],
            "description": "Open webport connection for internal source",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/documentorai-400501/global/firewalls/documentorai-firewall-internal-standardwebport",
            "log_config": [],
            "name": "documentorai-firewall-internal-standardwebport",
            "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "priority": 1000,
            "project": "documentorai-400501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/firewalls/documentorai-firewall-internal-standardwebport",
            "source_ranges": [
              "10.24.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "documentorai-firewall-internal-standardwebport"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.documentorai_vpc_01",
            "google_compute_subnetwork.documentorai_pubsubnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "documentorai_firewall_internet_dockerapiport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2375"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-08T18:49:16.453-07:00",
            "deny": [],
            "description": "Open webport connection for internet source",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-dockerapiport",
            "log_config": [],
            "name": "documentorai-firewall-internet-dockerapiport",
            "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "priority": 1000,
            "project": "documentorai-400501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-dockerapiport",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "documentorai-firewall-internet-dockerapiport"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.documentorai_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "documentorai_firewall_internet_standardsshport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-04T23:11:40.964-07:00",
            "deny": [],
            "description": "Open ssh porot connection for internet source",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-standardsshport",
            "log_config": [],
            "name": "documentorai-firewall-internet-standardsshport",
            "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "priority": 1000,
            "project": "documentorai-400501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-standardsshport",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "documentorai-firewall-internet-standardsshport"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.documentorai_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "documentorai_firewall_internet_standardwebport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-04T22:57:56.118-07:00",
            "deny": [],
            "description": "Open webport connection for internet source",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-standardwebport",
            "log_config": [],
            "name": "documentorai-firewall-internet-standardwebport",
            "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "priority": 1000,
            "project": "documentorai-400501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-standardwebport",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "documentorai-firewall-internet-standardwebport"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.documentorai_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "documentorai_firewall_internet_thismotherfckergoesmad",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-10-04T22:57:55.464-07:00",
            "deny": [],
            "description": "Open all connection for internet source",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-thismotherfckergoesmad",
            "log_config": [],
            "name": "documentorai-firewall-internet-thismotherfckergoesmad",
            "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "priority": 1000,
            "project": "documentorai-400501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/firewalls/documentorai-firewall-internet-thismotherfckergoesmad",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "documentorai-firewall-internet-thismotherfckergoesmad"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.documentorai_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "documentorai-vm-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "documentorai-vm-01",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230918",
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/zones/asia-southeast1-c/disks/documentorai-vm-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm-add-tf"
            },
            "enable_display": false,
            "id": "projects/documentorai-400501/zones/asia-southeast1-c/instances/documentorai-vm-01",
            "instance_id": "8035002701421928818",
            "label_fingerprint": "TY4jICpVWYE=",
            "labels": {
              "goog-ec-src": "vm-add-tf"
            },
            "machine_type": "e2-custom-2-4096",
            "metadata": {
              "ssh-keys": "rivan:ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAQEAhiHWyHv+ZJ34vb3yV/ifp7ma8d4lvBViyeVDS4074d48lb+ya3O9oletZXexEyv3pXDtW1gXQIHRZr/Qh0h8TwSTKo+29Obp9QDbP3Nmwp12llDbMiYuXGn7McpuhWUYvW8zTSfPVBNBKtUKf+JiAf3Z4vCYkcAJKx5Xg3Zf2lmwF41E1EJIRAY0qSb87rbDSmyRhdQHhS4aUsLvxGhSYTuf+gh8ohgAPmdAqBU728Waf85l2xUGq4BJMt7EsZWMvOmowtVGJdj4cXH26CtoDgFF5DzL4CPFdztQpNKs5f31SXfhpUNlY7EpZ0jkoNeF5xQf/5EwNt22gbxlHUNwCw== rivan",
              "startup-script": "sudo apt update -y \u0026\u0026 sudo apt install -y git curl wget zsh \u0026\u0026\nsh -c \"$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)\"  \u0026\u0026 sed -i \"s/robbyrussell/bureau/g\" $HOME/.zshrc \u0026\u0026 curl -sSL https://get.docker.com/ | sh \u0026\u0026 sudo curl -L \"https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose \u0026\u00 [...]
            },
            "metadata_fingerprint": "1JnJ-z1xDzo=",
            "name": "documentorai-vm-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.213.164.178",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
                "network_ip": "10.24.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/regions/asia-southeast1/subnetworks/documentorai-pubsubnet-01",
                "subnetwork_project": "documentorai-400501"
              }
            ],
            "project": "documentorai-400501",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/zones/asia-southeast1-c/instances/documentorai-vm-01",
            "service_account": [
              {
                "email": "794906243107-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "documentorai-firewall-internet-standardsshport",
              "documentorai-firewall-internet-standardwebport"
            ],
            "tags_fingerprint": "_8Okhe_iwcs=",
            "terraform_labels": {
              "goog-ec-src": "vm-add-tf"
            },
            "zone": "asia-southeast1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "documentorai_vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "mtu": 0,
            "name": "documentorai-vpc-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "documentorai-400501",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "documentorai_pubsubnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-04T23:10:48.495-07:00",
            "gateway_address": "10.24.0.1",
            "id": "projects/documentorai-400501/regions/asia-southeast1/subnetworks/documentorai-pubsubnet-01",
            "ip_cidr_range": "10.24.0.0/20",
            "name": "documentorai-pubsubnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/global/networks/documentorai-vpc-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "documentorai-400501",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/documentorai-400501/regions/asia-southeast1/subnetworks/documentorai-pubsubnet-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.documentorai_vpc_01"
          ]
        }
      ]
    }
  ]
}